@@ -6,7 +6,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class FootballPositionServiceImpl implements FootballPositionService {
@@ -15,6 +14,6 @@ public class FootballPositionServiceImpl implements FootballPositionService {
     public List<FootballPositionResponse> getAllPositions() {
         return Arrays.stream(FootballPosition.values())
                 .map(position -> new FootballPositionResponse(position.name(), position.getDescription()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
